--- a/scripts/dataset_curation/MERLIN_add_qc_to_deduplicated_metadata.html
+++ b/scripts/dataset_curation/MERLIN_add_qc_to_deduplicated_metadata.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-05-28" />
+<meta name="date" content="2025-07-09" />
 
-<title>Data Cleaning Step 5- Add QCD data to de-duplicated metadata</title>
+<title>Data Cleaning Step 5 - Add QCD data to de-duplicated metadata</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,10 +350,10 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Data Cleaning Step 5- Add QCD data to
+<h1 class="title toc-ignore">Data Cleaning Step 5 - Add QCD data to
 de-duplicated metadata</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-05-28</h4>
+<h4 class="date">2025-07-09</h4>
 
 </div>
 
@@ -375,7 +375,7 @@ Sys.info()</code></pre>
 ##                                                                                             version 
 ## &quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
 ##                                                                                            nodename 
-##                                                                                    &quot;msla0572.local&quot; 
+##                                                                       &quot;msla0572.wifi.med.umich.edu&quot; 
 ##                                                                                             machine 
 ##                                                                                            &quot;x86_64&quot; 
 ##                                                                                               login 
@@ -385,7 +385,7 @@ Sys.info()</code></pre>
 ##                                                                                      effective_user 
 ##                                                                                          &quot;kgontjes&quot;</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>## R version 4.5.0 (2025-04-11)
+<pre><code>## R version 4.5.1 (2025-06-13)
 ## Platform: x86_64-apple-darwin20
 ## Running under: macOS Sequoia 15.5
 ## 
@@ -408,15 +408,15 @@ Sys.info()</code></pre>
 ##  [9] ggplot2_3.5.2   tidyverse_2.0.0 knitr_1.50     
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     tidyselect_1.2.1  
+##  [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.1     tidyselect_1.2.1  
 ##  [5] jquerylib_0.1.4    scales_1.4.0       yaml_2.3.10        fastmap_1.2.0     
 ##  [9] R6_2.6.1           generics_0.1.4     bslib_0.9.0        pillar_1.10.2     
 ## [13] RColorBrewer_1.1-3 tzdb_0.5.0         rlang_1.1.6        cachem_1.1.0      
 ## [17] stringi_1.8.7      xfun_0.52          sass_0.4.10        timechange_0.3.0  
 ## [21] cli_3.6.5          withr_3.0.2        magrittr_2.0.3     digest_0.6.37     
-## [25] grid_4.5.0         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
+## [25] grid_4.5.1         rstudioapi_0.17.1  hms_1.1.3          lifecycle_1.0.4   
 ## [29] vctrs_0.6.5        evaluate_1.0.3     glue_1.8.0         farver_2.1.2      
-## [33] rmarkdown_2.29     tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.8.1</code></pre>
+## [33] rmarkdown_2.29     tools_4.5.1        pkgconfig_2.0.3    htmltools_0.5.8.1</code></pre>
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
@@ -459,7 +459,7 @@ metadata$specimen_category &lt;- ifelse(metadata$specimen %in% c(&quot;Bath 1&qu
                                                   ifelse(metadata$specimen %in% c(&quot;Stool 1A&quot;,&quot;Stool 2A&quot;,&quot;Stool 3A&quot;),&quot;Human&quot;,&quot;Unknown&quot;)))
 
 metadata$individual_id &lt;- paste0(metadata$household,&quot;_&quot;,metadata$specimen)
-metadata$index &lt;-  grepl(&#39;hi&#39;,metadata$location_or_participant) | grepl(&quot;MER&quot;,metadata$household_number_recode)
+metadata$index &lt;-  c(grepl(&#39;hi&#39;,metadata$location_or_participant) &amp; metadata$specimen_category == &quot;Human&quot;) | grepl(&quot;MER&quot;,metadata$household_number_recode) 
 metadata$isolate_name &lt;- paste0(metadata$household,&quot;_&quot;,metadata$visit,&quot;_&quot;,metadata$specimen)</code></pre>
 <pre class="r"><code>metadata_clean &lt;- metadata %&gt;% select(-no_correct_platemap,-WGS_qc_pass_runs_num,-WGS_qc_pass_ids_num)
 colnames(metadata_clean) &lt;- gsub(&quot;\\.|\\.\\.\\.&quot;,&quot;_&quot;,colnames(metadata_clean))
