--- a/scripts/results_sections/results_section_3_prolonged_colonization_data.html
+++ b/scripts/results_sections/results_section_3_prolonged_colonization_data.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-07-01" />
+<meta name="date" content="2025-07-09" />
 
 <title>Results Section 3: Discrimination of prolonged colonization using WGS</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 3: Discrimination of
 prolonged colonization using WGS</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-07-01</h4>
+<h4 class="date">2025-07-09</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                             version 
 &quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
                                                                                            nodename 
-                                                                    &quot;macbookpro.wifi.med.umich.edu&quot; 
+                                                                      &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                             machine 
                                                                                            &quot;x86_64&quot; 
                                                                                               login 
@@ -652,6 +652,19 @@ loaded via a namespace (and not attached):
 <h1>Load data</h1>
 <pre><code>[1] &quot;Number of subjects with index specimens positive: 31&quot;</code></pre>
 <pre><code>[1] &quot;Proportion of subjects with index specimens positive: 0.775&quot;</code></pre>
+</div>
+<div id="how-many-of-the-maldi-level-prolonged-colonization-had-sequencing" class="section level1">
+<h1>How many of the MALDI-level prolonged colonization had
+sequencing?</h1>
+<pre><code>[1] &quot;How many of the prolonged colonization episodes we had their index sequenced: 22&quot;</code></pre>
+<pre><code>[1] &quot;How many of the clinical definition did we have qc-passing WGS escre genome?&quot;</code></pre>
+<pre><code>
+FALSE  TRUE 
+    2    20 </code></pre>
+</div>
+<div id="data-for-the-individuals-w-maldi-level-prolonged-colonization-with-sequencing" class="section level1">
+<h1>Data for the individuals w/ MALDI-level prolonged colonization with
+sequencing</h1>
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
 <thead>
 <tr>
@@ -672,10 +685,10 @@ prop
 Any ESCrE
 </td>
 <td style="text-align:right;">
-23
+20
 </td>
 <td style="text-align:right;">
-0.7419355
+1.00
 </td>
 </tr>
 <tr>
@@ -683,10 +696,205 @@ Any ESCrE
 Species
 </td>
 <td style="text-align:right;">
-21
+20
 </td>
 <td style="text-align:right;">
-0.6774194
+1.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Sequence type
+</td>
+<td style="text-align:right;">
+17
+</td>
+<td style="text-align:right;">
+0.85
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain
+</td>
+<td style="text-align:right;">
+16
+</td>
+<td style="text-align:right;">
+0.80
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+ESCrE gene
+</td>
+<td style="text-align:right;">
+19
+</td>
+<td style="text-align:right;">
+0.95
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain + ESCrE gene
+</td>
+<td style="text-align:right;">
+19
+</td>
+<td style="text-align:right;">
+0.95
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain + plasmid-linked ESCrE gene
+</td>
+<td style="text-align:right;">
+18
+</td>
+<td style="text-align:right;">
+0.90
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="data-from-individuals-without-maldi-predicted-prolonged-colonization" class="section level1">
+<h1>Data from individuals without MALDI-predicted prolonged
+colonization</h1>
+<table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
+<thead>
+<tr>
+<th style="text-align:left;">
+variable
+</th>
+<th style="text-align:right;">
+n
+</th>
+<th style="text-align:right;">
+prop
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Any ESCrE
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+0.1818182
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Species
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.0000000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Sequence type
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.0000000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.0000000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+ESCrE gene
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.0000000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain + ESCrE gene
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.0000000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Strain + plasmid-linked ESCrE gene
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.0000000
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="overall-data" class="section level1">
+<h1>Overall data</h1>
+<table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
+<thead>
+<tr>
+<th style="text-align:left;">
+variable
+</th>
+<th style="text-align:right;">
+n
+</th>
+<th style="text-align:right;">
+prop
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+Any ESCrE
+</td>
+<td style="text-align:right;">
+22
+</td>
+<td style="text-align:right;">
+0.7096774
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Species
+</td>
+<td style="text-align:right;">
+20
+</td>
+<td style="text-align:right;">
+0.6451613
 </td>
 </tr>
 <tr>
