--- a/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
+++ b/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-07-01" />
+<meta name="date" content="2025-07-09" />
 
 <title>Results Section 4: Sharing of ESCrEs provides additional support for prolonged colonization</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 4: Sharing of ESCrEs
 provides additional support for prolonged colonization</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-07-01</h4>
+<h4 class="date">2025-07-09</h4>
 
 </div>
 
@@ -379,7 +379,7 @@ Sys.info()</code></pre>
                                                                                             version 
 &quot;Darwin Kernel Version 24.5.0: Tue Apr 22 19:53:26 PDT 2025; root:xnu-11417.121.6~2/RELEASE_X86_64&quot; 
                                                                                            nodename 
-                                                                    &quot;macbookpro.wifi.med.umich.edu&quot; 
+                                                                      &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                             machine 
                                                                                            &quot;x86_64&quot; 
                                                                                               login 
@@ -443,8 +443,8 @@ Strain  0  1
   Same strain (n=16) p-value
 2         16 (100.0)  &lt;0.001</code></pre>
 </div>
-<div id="two-many-were-linked-by-plasmid" class="section level1">
-<h1>Two many were linked by plasmid</h1>
+<div id="how-many-were-linked-by-plasmid" class="section level1">
+<h1>How many were linked by plasmid?</h1>
 <pre><code>[1] &quot;Strain vs. Plasmid-linked ESCrE genes&quot;</code></pre>
 <pre><code>      Plasmid-linked ESCrE
 Strain  0  1
@@ -1180,46 +1180,6 @@ Klebsiella pneumoniae ST 29 Cluster 1
 </td>
 <td style="text-align:right;">
 1
-</td>
-<td style="text-align:left;">
-AA452
-</td>
-<td style="text-align:left;">
-blaCTX-M-15;blaSHV-187;blaTEM-1
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-blaSHV-187
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-AA452
-</td>
-<td style="text-align:left;">
-AA452
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-151H
-</td>
-<td style="text-align:left;">
-MERLIN_32
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 29 Cluster 1
-</td>
-<td style="text-align:right;">
-3
 </td>
 <td style="text-align:left;">
 AA452
